--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "ag-grid-react": "^32.0.0",
     "axios": "^1.7.2",
     "daisyui": "^4.12.8",
+    "date-fns": "^3.6.0",
     "i": "^0.3.7",
     "lucide-react": "^0.396.0",
     "npm": "^10.8.1",
