--- a/server/package.json
+++ b/server/package.json
@@ -35,7 +35,10 @@
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
     "net": "^1.0.2",
+    "node-cron": "^3.0.3",
     "node-forge": "^1.3.1",
+    "nodemailer": "^6.9.14",
+    "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^3.1.3",
     "p-limit": "^5.0.0",
     "proxy-chain": "^2.4.0",
@@ -48,7 +51,7 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "puppeteer-page-proxy": "^1.3.0",
     "puppeteer-proxy": "^2.1.2",
-    "qs": "^6.12.1",
+    "qs": "^6.12.3",
     "readline-sync": "^1.4.10",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
