--- a/client/package.json
+++ b/client/package.json
@@ -39,18 +39,23 @@
     "npm": "^10.8.1",
     "primereact": "^10.6.6",
     "react": "^18.3.1",
+    "react-collapse": "^5.1.1",
+    "react-collapsed": "^4.1.2",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "react-spreadsheet": "^0.9.5",
     "react-spreadsheet-grid": "^2.3.1",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
     "scheduler": "^0.23.2",
     "socket.io-client": "^4.7.5",
+    "use-react-countries": "^2.0.1",
     "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   },
