--- a/server/package.json
+++ b/server/package.json
@@ -13,18 +13,20 @@
   "license": "ISC",
   "dependencies": {
     "@sparticuz/chromium": "^106.0.2",
-    "axios": "^1.7.2",
+    "axios": "^1.7.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0-rc.12",
     "clipboardy": "^4.0.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "disposable-email-detector": "^1.0.3",
     "dotenv": "^16.4.5",
     "email-existence": "^0.1.6",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "hpagent": "^1.2.0",
     "http": "^0.0.1-security",
